added conversion paths

--- a/conversionDiagram.css
+++ b/conversionDiagram.css
@@ -4,6 +4,11 @@ svg text{
     stroke-width: 0;
 }
 
+svg .diagramContainer{
+	fill: none;
+	stroke: none;
+}
+
 svg g.DatumGroup rect.Count:first-of-type{ 
 	fill: rgba(0,153,224,0.1);
 	stroke: rgba(0,153,224,1);
@@ -18,4 +23,19 @@ svg g.DatumGroup rect.Count:nth-of-type(2){
 svg g.DatumGroup rect.Count:nth-of-type(3){
 	fill: rgba(0,153,224,0.7);
 	stroke: rgba(0,153,224,1);
+}
+
+svg g.DatumGroup path.ConversionPath{
+	stroke: rgba(0,153,224,1);
+	stroke-width: 1px;
+}
+
+svg g.DatumGroup path.ConversionPath:nth-of-type(1){
+	fill: rgba(0,153,224,0.25);
+
+}
+
+
+svg g.DatumGroup path.ConversionPath:nth-of-type(2){
+	fill: rgba(0,153,224,0.55);
 }
