--- a/conversionDiagram.css
+++ b/conversionDiagram.css
@@ -9,10 +9,29 @@
     stroke-width: 0;
 }
 
+#conversionDiagramWrapper svg .monthListContainer .DateBox{
+	fill: none;
+	stroke: #000;
+	stroke-width: 1px;
+}
+
+#conversionDiagramWrapper svg .monthListContainer .DateAnchorLine.Selected,
+#conversionDiagramWrapper svg .monthListContainer .DateBox.Selected{
+	transition: stroke-width 0.25s;
+	stroke-width: 2px;
+}
+
 #conversionDiagramWrapper svg .diagramContainer{
 	fill: none;
 	stroke: none;
 }
+
+#conversionDiagramWrapper svg .ScopeLine{
+	fill: none;
+	stroke: #000;
+	stroke-width: 2px;
+}
+
 
 #conversionDiagramWrapper svg g.DatumGroup rect.Count:first-of-type{ 
 	fill: rgba(0,153,224,0.1);
@@ -43,4 +62,38 @@
 
 #conversionDiagramWrapper svg g.DatumGroup path.ConversionPath:nth-of-type(2){
 	fill: rgba(0,153,224,0.55);
+}
+
+/* ******************* */
+
+
+#conversionDiagramWrapper svg g.DatumGroup:hover rect.Count:first-of-type{ 
+	fill: rgba(0,153,224,0.3);
+	stroke: rgba(0,153,224,1);
+}
+
+
+#conversionDiagramWrapper svg g.DatumGroup:hover rect.Count:nth-of-type(2){
+	fill: rgba(0,153,224,0.6);
+	stroke: rgba(0,153,224,1);
+}
+
+#conversionDiagramWrapper svg g.DatumGroup:hover rect.Count:nth-of-type(3){
+	fill: rgba(0,153,224,0.9);
+	stroke: rgba(0,153,224,1);
+}
+
+#conversionDiagramWrapper svg g.DatumGroup:hover path.ConversionPath{
+	stroke: rgba(0,153,224,1);
+	stroke-width: 1px;
+}
+
+#conversionDiagramWrapper svg g.DatumGroup:hover path.ConversionPath:nth-of-type(1){
+	fill: rgba(0,153,224,0.45);
+
+}
+
+
+#conversionDiagramWrapper svg g.DatumGroup:hover path.ConversionPath:nth-of-type(2){
+	fill: rgba(0,153,224,0.75);
 }
