--- a/conversionDiagram.css
+++ b/conversionDiagram.css
@@ -33,67 +33,72 @@
 }
 
 
+#conversionDiagramWrapper svg .ColumnLabel{
+	font-size: 1.2em;
+	font-weight: 700;
+}
+
 #conversionDiagramWrapper svg g.DatumGroup rect.Count:first-of-type{ 
-	fill: rgba(0,153,224,0.1);
-	stroke: rgba(0,153,224,1);
+	fill: rgba(0,184,227,0.1);
+	stroke: rgba(0,184,227,1);
 }
 
 
 #conversionDiagramWrapper svg g.DatumGroup rect.Count:nth-of-type(2){
-	fill: rgba(0,153,224,0.4);
-	stroke: rgba(0,153,224,1);
+	fill: rgba(0,184,227,0.4);
+	stroke: rgba(0,184,227,1);
 }
 
 #conversionDiagramWrapper svg g.DatumGroup rect.Count:nth-of-type(3){
-	fill: rgba(0,153,224,0.7);
-	stroke: rgba(0,153,224,1);
+	fill: rgba(0,184,227,0.7);
+	stroke: rgba(0,184,227,1);
 }
 
 #conversionDiagramWrapper svg g.DatumGroup path.ConversionPath{
-	stroke: rgba(0,153,224,1);
+	stroke: rgba(0,184,227,1);
 	stroke-width: 1px;
 }
 
 #conversionDiagramWrapper svg g.DatumGroup path.ConversionPath:nth-of-type(1){
-	fill: rgba(0,153,224,0.25);
+	fill: rgba(0,184,227,0.25);
 
 }
 
 
 #conversionDiagramWrapper svg g.DatumGroup path.ConversionPath:nth-of-type(2){
-	fill: rgba(0,153,224,0.55);
+	fill: rgba(0,184,227,0.55);
 }
 
 /* ******************* */
 
 
 #conversionDiagramWrapper svg g.DatumGroup:hover rect.Count:first-of-type{ 
-	fill: rgba(0,153,224,0.3);
-	stroke: rgba(0,153,224,1);
+	fill: rgba(0,184,227,0.3);
+	stroke: rgba(0,184,227,1);
 }
 
 
 #conversionDiagramWrapper svg g.DatumGroup:hover rect.Count:nth-of-type(2){
-	fill: rgba(0,153,224,0.6);
-	stroke: rgba(0,153,224,1);
+	fill: rgba(0,184,227,0.6);
+	stroke: rgba(0,184,227,1);
 }
 
 #conversionDiagramWrapper svg g.DatumGroup:hover rect.Count:nth-of-type(3){
-	fill: rgba(0,153,224,0.9);
-	stroke: rgba(0,153,224,1);
+	fill: rgba(0,184,227,0.9);
+	stroke: rgba(0,184,227,1);
 }
 
 #conversionDiagramWrapper svg g.DatumGroup:hover path.ConversionPath{
-	stroke: rgba(0,153,224,1);
+	stroke: rgba(0,184,227,1);
 	stroke-width: 1px;
 }
 
 #conversionDiagramWrapper svg g.DatumGroup:hover path.ConversionPath:nth-of-type(1){
-	fill: rgba(0,153,224,0.45);
+	fill: rgba(0,184,227,0.45);
 
 }
 
 
 #conversionDiagramWrapper svg g.DatumGroup:hover path.ConversionPath:nth-of-type(2){
-	fill: rgba(0,153,224,0.75);
+	fill: rgba(0,184,227,0.75);
 }
