--- a/conversionDiagram.css
+++ b/conversionDiagram.css
@@ -15,6 +15,16 @@
 	stroke-width: 1px;
 }
 
+#conversionDiagramWrapper svg .monthListContainer .DateBox,
+#conversionDiagramWrapper svg .monthListContainer text{
+	cursor: pointer;
+}
+
+#conversionDiagramWrapper svg .monthListContainer .DateGroup:hover .DateBox,
+#conversionDiagramWrapper svg .monthListContainer .DateBox.Selected{
+	fill: #eee;
+}
+
 #conversionDiagramWrapper svg .monthListContainer .DateAnchorLine.Selected,
 #conversionDiagramWrapper svg .monthListContainer .DateBox.Selected{
 	transition: stroke-width 0.25s;
